2007-05-09  Petr Machata  <pmachata@redhat.com>

	* wait_for_something.c (wait_for_something): Interpret SIGILL,
	SIGEMT and SIGSEGV as valid breakpoint signals, if instruction
	pointer referes to breakpoint.
	* testsuite/ltrace.torture/ia64-sigill.s,
	* testsuite/ltrace.torture/ia64-sigill.exp: Testcase for same.
	IA64-centric, because the only reproducer is there.

2007-01-19  Petr Machata  <pmachata@redhat.com>

	* sysdeps/linux-gnu/trace.c (trace_pid): wait for child to stop,
	as indicated by ptrace documentation.
	* proc.c (open_pid): start the traced child again, it will have
	been stopped after trace_pid.  Fixes tracing with -p.
	* breakpoints.c: initialize proc->breakpoints always, don't wait
	untill it might be needed.  This renders a check in insert_breakpoint
	superfluous.  Fixes a sigsegvs experienced with -L.

2006-12-28  Eric Vaitl  <evaitl@cisco.com>

	* sysdeps/linux-gnu/mipsel/* Added mipsel support
	* debug.h Added printf format attribute to debug_
	* elf.h Added mips relocation data to struct ltelf
	* elf.c (do_init_elf) Read mips relocation data
	* elf.c (read_elf) On the mips loop through mips_gotsym 
	instead of relplt_count.
	* process_event.c (process_breakpoint) For the mips, 
	conditionally add a new breakpoint if the address of the 
	function changes because of lazy relocation. 
	* breakpoints.c (enable_all_breakpoints) For the mips, 
	reinsert breakpoints after the child has been started. 
	

2006-11-30  Petr Machata  <pmachata@redhat.com>

	* elf.c (elf_gnu_hash): renamed to private_elf_gnu_hash to avoid
	conflicts with non-static version from libelf.

2006-11-30  Petr Machata  <pmachata@redhat.com>

	* elf.c (in_load_libraries): removed unused variables
	bitmask_idxbits and shift.
	* elf.c (do_init_elf, opd2addr): use ARCH_SUPPORTS_OPD to
	determine whether to load/use .opd section
	* sysdeps/linux-gnu/*/arch.h: define ARCH_SUPPORTS_OPD accordingly
	* breakpoints.c (insert_breakpoint): rewrite loop to canonical for
