@@ -1,0 +1,6 @@
+#include <stdio.h>
+int main (void)
+{
+  puts("Hello, World.");
+  return 0;
+}
